MAGENTO2-516 Fixing configuration logic
Signed-off-by: Konstantin Kiritsenko <k@componentk.com>

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
             "registration.php"
         ],
         "psr-4": {
-            "Shopgate\\WebsiteSampleData\\": ""
+            "Shopgate\\WebsiteSampleData\\": "",
+            "Shopgate\\WebsiteSampleData\\Test\\": "Test"
         }
     }
 }
