MAGENTO2-502 Moving module out of src directory into main * Apparently Magento has some composer functionality on removal that expect composer.json to be in the root of the module, namely "src" folder.
Signed-off-by: Konstantin Kiritsenko <k@componentk.com>

--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
   },
   "autoload": {
     "files": [
-      "src/registration.php"
+      "registration.php"
     ],
     "psr-4": {
-      "Shopgate\\WebsiteSampleData\\": "src",
-      "Shopgate\\WebsiteSampleData\\Test\\": "src/Test"
+      "Shopgate\\WebsiteSampleData\\": "",
+      "Shopgate\\WebsiteSampleData\\Test\\": "Test"
     }
   }
 }
