--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": "~7.2.0",
+    "php": "~7.2.0||~7.3.0",
     "magento/module-directory": "100.3.*",
     "magento/module-sample-data": "100.3.*",
     "magento/module-store": "101.0.*"
