--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,31 @@
 {
-  "name": "shopgate/magento2-website-sample-data",
-  "description": "Sample data that provides multiple websites and stores to use for various work",
-  "license": "Apache-2.0",
-  "version": "0.2.0",
-  "type": "magento2-module",
-  "authors": [
-    {
-      "name": "Shopgate",
-      "email": "interfaces@shopgate.com"
-    }
-  ],
-  "require": {
-    "php": "~7.2.0||~7.3.0",
-    "magento/module-directory": "100.3.*",
-    "magento/module-sample-data": "100.3.*",
-    "magento/module-store": "101.0.*"
-  },
-  "require-dev": {
-    "roave/security-advisories": "dev-master"
-  },
-  "autoload": {
-    "files": [
-      "registration.php"
+    "name": "shopgate/magento2-website-sample-data",
+    "description": "Sample data that provides multiple websites and stores to use for various work",
+    "license": "Apache-2.0",
+    "version": "0.2.1",
+    "type": "magento2-module",
+    "authors": [
+        {
+            "name": "Shopgate",
+            "email": "interfaces@shopgate.com"
+        }
     ],
-    "psr-4": {
-      "Shopgate\\WebsiteSampleData\\": "",
-      "Shopgate\\WebsiteSampleData\\Test\\": "Test"
+    "require": {
+        "php": ">=7.1",
+        "magento/module-directory": "^100.0",
+        "magento/module-sample-data": "^100.0",
+        "magento/module-store": "^101.0"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
+    },
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Shopgate\\WebsiteSampleData\\": "",
+            "Shopgate\\WebsiteSampleData\\Test\\": "Test"
+        }
     }
-  }
 }
